# ARC

./: .gitignore  CMakeLists.txt  arc_ssh.py  basic.frag  basic.vert  bt-lidar-list-test.py  bus.py  fifo-test.py  kalibrering.py  pi.sh  proxy.py  readme.txt  server.py  start2.sh  startup.sh  styrkalibrering.py  styrmodul.c  test.py  testspi.py  tgt.py  tgtbord.py  user_ssh.py  zmq-pub.py  zmq-sub.py
bus/: bus_client.c  bus_client.h  bus_master.c  fifo_to_control  spi.c
bus_atmega/: slave_client.c  spi_slave.c  spi_slave.h
camera_prog/: CMakeLists.txt  camera.py  defines.h  defines.py  hinder_det.cpp  hinder_det.h  hinderdet_main.cpp  test.py  video.h264
graphicsTest/: About the OpenGL 3 examples.txt
graphicsTest/ARC_PY/: ROUTER_DEALER.py  Req_client.py  Req_worker.py  proxy.py  rep.py  send.py
graphicsTest/deptFolder/Perspective bunny 2/: perspectivebunny.c  test
graphicsTest/deptFolder/graphicsMain/: SkyBox513.tga  clientTest  clientTest.cpp  graphics.cpp  m.test  m.test2  mainGraphics  makefile  persp.frag  perspectivebunny  serverTest.cpp  skybox.frag  sshmain.cpp  terrain.frag
graphicsTest/include/: ModelObj.h  defines.h
graphicsTest/src/: ModelObj.cpp
include/: defines.h  graphics.h  hinder_det.h  hinder_det_canny.h  log.h  log1.h  spi.h  test.h
late_night_hakking/: car_forwarder.py  main-loop.py  spi-master.py  whatyourAVRinterruptsshouldlooklike.c
lidar/: enkel_reglertest.py  fifo-test.py  lidar_angle_test(reset).py  lidar_angle_test.py  lidar_bt_module.py  lidar_rotation_test.py  medelAlgoritm.py  segmentAlgorithm.py  segmentAlgorithmKomm.py  segmentAlgorithmSpeedTest.py  segmentTestBlutoothMysko.py  sidoReglering.py  threading-testing.py
openCVrelease/: CMakeVars.txt  CPackConfig.cmake  CPackSourceConfig.cmake  OpenCVConfig.cmake  OpenCVModules.cmake  cmake_uninstall.cmake  cvconfig.h  version_string.tmp
openCVrelease/modules/calib3d/: opencv_calib3d_pch_dephelp.cxx  opencv_perf_calib3d_pch_dephelp.cxx  opencv_test_calib3d_pch_dephelp.cxx
openCVrelease/modules/core/: opencv_core_pch_dephelp.cxx  opencv_perf_core_pch_dephelp.cxx  opencv_test_core_pch_dephelp.cxx
openCVrelease/modules/features2d/: opencv_features2d_pch_dephelp.cxx  opencv_perf_features2d_pch_dephelp.cxx  opencv_test_features2d_pch_dephelp.cxx
openCVrelease/modules/flann/: opencv_flann_pch_dephelp.cxx  opencv_test_flann_pch_dephelp.cxx
openCVrelease/modules/highgui/: opencv_highgui_pch_dephelp.cxx  opencv_test_highgui_pch_dephelp.cxx
openCVrelease/modules/imgcodecs/: opencv_imgcodecs_pch_dephelp.cxx  opencv_perf_imgcodecs_pch_dephelp.cxx  opencv_test_imgcodecs_pch_dephelp.cxx
openCVrelease/modules/imgproc/: opencv_imgproc_pch_dephelp.cxx  opencv_perf_imgproc_pch_dephelp.cxx  opencv_test_imgproc_pch_dephelp.cxx
openCVrelease/modules/ml/: opencv_ml_pch_dephelp.cxx  opencv_test_ml_pch_dephelp.cxx
openCVrelease/modules/objdetect/: opencv_objdetect_pch_dephelp.cxx  opencv_perf_objdetect_pch_dephelp.cxx  opencv_test_objdetect_pch_dephelp.cxx
openCVrelease/modules/photo/: opencv_perf_photo_pch_dephelp.cxx  opencv_photo_pch_dephelp.cxx  opencv_test_photo_pch_dephelp.cxx
openCVrelease/modules/python3/: headers.txt  pyopencv_custom_headers.h
openCVrelease/modules/shape/: opencv_shape_pch_dephelp.cxx  opencv_test_shape_pch_dephelp.cxx
openCVrelease/modules/stitching/: opencv_perf_stitching_pch_dephelp.cxx  opencv_stitching_pch_dephelp.cxx  opencv_test_stitching_pch_dephelp.cxx
openCVrelease/modules/superres/: opencv_perf_superres_pch_dephelp.cxx  opencv_superres_pch_dephelp.cxx  opencv_test_superres_pch_dephelp.cxx
openCVrelease/modules/ts/: opencv_ts_pch_dephelp.cxx
openCVrelease/modules/video/: opencv_perf_video_pch_dephelp.cxx  opencv_test_video_pch_dephelp.cxx  opencv_video_pch_dephelp.cxx
openCVrelease/modules/videoio/: opencv_perf_videoio_pch_dephelp.cxx  opencv_test_videoio_pch_dephelp.cxx  opencv_videoio_pch_dephelp.cxx
openCVrelease/modules/videostab/: opencv_videostab_pch_dephelp.cxx
openCVrelease/unix-install/: opencv.pc
result/: arc_ssh.py  readme.txt  segmentAlgorithm.py  sensor.c  styr.c
result/userInterface/common/: CMakeLists.txt  LoadTGA.c  camera.cpp  loadobj.c
result/userInterface/graphicsMain/: graphics.cpp  mainGraphics  makefile  persp.frag  persp.vert  perspectivebunny.c  terrain.frag  terrain.vert  white512.tga
result/userInterface/include/: ModelObj.h  defines.h
sensor/: Sensor.c  Sensor_module.c  kalmanfilter.c
src/: defines.cpp  hinder_det.cpp  hinder_det_canny.cpp  hinderdet_main.cpp  main.cpp  spi.cpp  test.cpp
src/TSBK07/: GL_utilities.c  loadobj.c
src/server/: server
styr/: GccBoardProject2.atsln  GccBoardProject2.atsuo
styr/GccBoardProject2/: GccBoardProject2.cproj
styr/GccBoardProject2/Debug/: GccBoardProject2.elf  GccBoardProject2.hex  GccBoardProject2.lss  GccBoardProject2.map  Makefile  (+1 more)
zmq_server/: zmq-server.py
(+7 files in other folders)
